--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
                 <!-- LOADER GIF -->
                  <img src="/images/giphy.webp">
             </button>
+            <button id="tryAgainBtn">
+                <span>Try Again</span>
+            </button>
           </div>
           <!-- MATCH RESULT BOX -->
-           <div class="matchResultBox">
-            Friends
-           </div>
+           <div class="matchResultBox"></div>
     </div>
     <script src="js/app.js"></script>
 </body>
